# worldCup_Predic

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  database.py  main.py  predictor.py  pyproject.toml  simulator.py
data/: seed_data.sql
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Bracket.tsx  Dashboard.tsx  GroupStages.tsx  MatchCenter.tsx  MyPredictions.tsx
frontend/src/lib/: api.ts
