[project]
name = "worldcup-predic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
